--- a/sklearn-pandas.ipynb
+++ b/sklearn-pandas.ipynb
@@ -536,7 +536,7 @@
     "* hypertensive_crisis  \n",
     "  \n",
     "  \n",
-    "![title](images/blood_pressure.png)  \n",
+    "![title](https://www.inquirer.com/resizer/jACzP-uAGFwY4JBAfo7tY6qUj-k=/1400x932/smart/arc-anglerfish-arc2-prod-pmn.s3.amazonaws.com/public/PHXNJPTEGRB4RCDYCFJZ6IBOZY.jpg)  \n",
     "Photo from [American Heart Association](https://www.heart.org/-/media/data-import/downloadables/pe-abh-what-is-high-blood-pressure-ucm_300310.pdf?la=en&hash=CAC0F1D377BDB7BC3870993918226869524AAC3D)"
    ]
   },
